--- a/tetrecs/src/main/resources/style/game.css
+++ b/tetrecs/src/main/resources/style/game.css
@@ -21,12 +21,13 @@
 }
 
 .menuItem {
-    -fx-fill: white;
+    -fx-fill: rgb(247, 222, 0);
     -fx-font-family: 'Orbitron';
     -fx-font-size: 32px;
     -fx-font-weight: 700;
-    -fx-border-color: black;
+    -fx-border-color: rgb(0, 17, 255);
     -fx-stroke: black;
+    -fx-background-color: #ff000000;
     -fx-effect: dropshadow(gaussian, black, 1, 1.0, 1, 1);
 }
 
