--- a/tetrecs/src/main/resources/style/game.css
+++ b/tetrecs/src/main/resources/style/game.css
@@ -31,6 +31,10 @@
     -fx-effect: dropshadow(gaussian, rgb(231, 27, 27), 1, 1.0, 1, 1);
 }
 
+.menuLogo {
+    -fx-padding: 50;
+}
+
 .menuItem:hover {
     -fx-fill: yellow;
     -fx-text-fill: yellow;
