--- a/tetrecs/src/main/resources/style/game.css
+++ b/tetrecs/src/main/resources/style/game.css
@@ -273,3 +273,12 @@ TextField {
     -fx-font-family: 'Orbitron';
     -fx-fill: white;
 }
+
+.settingLabel {
+    -fx-font-family: 'Orbitron';
+    -fx-font-size: 20px;
+    -fx-stroke: white;
+    -fx-text-alignment: center;
+    -fx-text-fill: white;
+
+}
